# AutoEvolve

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  autoevolve.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: LAUNCH.md
examples/01_text_compression_poem/: README.md  artifact.py  evaluator.py  expected_notes.md  goal.md  poem.txt  task.yaml
examples/02_prompt_optimization_sentiment/: README.md  dataset.jsonl  evaluator.py  expected_notes.md  goal.md  prompt.txt  task.yaml
examples/03_python_function_speed/: README.md  artifact.py  evaluator.py  expected_notes.md  goal.md  task.yaml
src/autoevolve/: __init__.py  __main__.py  cli.py  config.py  errors.py  lineage.py  models.py  prompt_builder.py  task_loader.py  version.py
src/autoevolve/archive/: __init__.py  base.py  in_memory.py  selectors.py
src/autoevolve/artifacts/: __init__.py  base.py  prompt_text.py  python_code.py
src/autoevolve/engine/: __init__.py  generation.py  loop.py  run_context.py  selection.py
tests/: conftest.py
tests/integration/: __init__.py  test_beam_run_prompt_text.py  test_beam_run_python_code.py  test_cli_smoke.py  test_output_artifacts.py  test_resume_run.py  test_swarm_run_with_mock.py
tests/live/: __init__.py  test_live_anthropic.py  test_live_openai.py
tests/unit/: test_archive_selectors.py  test_beam_selection.py  test_config.py  test_lineage.py  test_mock_provider.py  test_prompt_artifact.py  test_prompt_builder.py  test_python_artifact.py  test_sandbox.py  test_task_loader.py
(+49 files in other folders)
